--- a/product page.html
+++ b/product page.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="fonts/fontawesome/all.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/jquery-ui.min.css">
-  <!-- <link rel="stylesheet" href="css/jquery-ui.min.css"> -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -78,370 +78,9 @@
 
           <div class="col-lg-12"> <!--Товары-->
             <div id="content">
-
             </div>
-            <!-- <div class="object ">
-              <p>Коляска Chicco Lite Way stroller Red Passion</p>
-              <div class="info_tovar">
-                <div class="info_tovar_img">
-                  <img src="img/Коляска.png" alt="Коляска">
-                </div>
-                <div class="lines">
-                  <div class="line">
-                    <div class="line1">Тип</div>
-                    <div class="line2">Прогулочная</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество блоков</div>
-                    <div class="line2">Один</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Механизм складывания</div>
-                    <div class="line2">Трость</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество колес</div>
-                    <div class="line2">8</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Колеса</div>
-                    <div class="line2">Резиновые</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Максимальный возраст</div>
-                    <div class="line2">3 года</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Цвет</div>
-                    <div class="line2">Синий</div>
-                  </div>
-                  <a href="product selection.html" class="lines_v_korziny_a">
-                    <div class="lines_v_korziny">
-                      <div class="lines_btn_v_korziny">
-                        <i class="fas fa-shopping-basket"></i>в корзину
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="info_tovar_price">
-                  <div class="info_tovar_price_status">
-                    <i class="fas fa-check-circle"></i>Есть в наличии
-                  </div>
-                  <div class="info_tovar_price_procherk">
-                    15800 грн.
-                  </div>
-                  <a href="product selection.html">
-                    <div class="info_tovar_price_price">
-                      <div class="info_tovar_price_price_p">
-                        14590 Г.
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="object ">
-              <p>Коляска Chicco Lite Way stroller Red Passion</p>
-              <div class="info_tovar">
-                <div class="info_tovar_img">
-                  <img src="img/Коляска.png" alt="Коляска">
-                </div>
-                <div class="lines">
-                  <div class="line">
-                    <div class="line1">Тип</div>
-                    <div class="line2">Прогулочная</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество блоков</div>
-                    <div class="line2">Один</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Механизм складывания</div>
-                    <div class="line2">Трость</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество колес</div>
-                    <div class="line2">8</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Колеса</div>
-                    <div class="line2">Резиновые</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Максимальный возраст</div>
-                    <div class="line2">3 года</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Цвет</div>
-                    <div class="line2">Синий</div>
-                  </div>
-                  <a href="#" class="lines_v_korziny_a">
-                    <div class="lines_v_korziny">
-                      <div class="lines_btn_v_korziny">
-                        <i class="fas fa-shopping-basket"></i>в корзину
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="info_tovar_price">
-                  <div class="info_tovar_price_status">
-                    <i class="fas fa-check-circle"></i>Есть в наличии
-                  </div>
-                  <div class="info_tovar_price_procherk">
-                    15800 грн.
-                  </div>
-                  <a href="product selection.html">
-                    <div class="info_tovar_price_price">
-                      <div class="info_tovar_price_price_p">
-                        14590 Г.
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="object ">
-              <p>Коляска Chicco Lite Way stroller Red Passion</p>
-              <div class="info_tovar">
-                <div class="info_tovar_img">
-                  <img src="img/Коляска.png" alt="Коляска">
-                </div>
-                <div class="lines">
-                  <div class="line">
-                    <div class="line1">Тип</div>
-                    <div class="line2">Прогулочная</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество блоков</div>
-                    <div class="line2">Один</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Механизм складывания</div>
-                    <div class="line2">Трость</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество колес</div>
-                    <div class="line2">8</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Колеса</div>
-                    <div class="line2">Резиновые</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Максимальный возраст</div>
-                    <div class="line2">3 года</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Цвет</div>
-                    <div class="line2">Синий</div>
-                  </div>
-                  <a href="#" class="lines_v_korziny_a">
-                    <div class="lines_v_korziny">
-                      <div class="lines_btn_v_korziny">
-                        <i class="fas fa-shopping-basket"></i>в корзину
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="info_tovar_price">
-                  <div class="info_tovar_price_status">
-                    <i class="fas fa-check-circle"></i>Есть в наличии
-                  </div>
-                  <div class="info_tovar_price_procherk">
-                    15800 грн.
-                  </div>
-                  <a href="product selection.html">
-                    <div class="info_tovar_price_price">
-                      <div class="info_tovar_price_price_p">
-                        14590 Г.
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="object ">
-              <p>Коляска Chicco Lite Way stroller Red Passion</p>
-              <div class="info_tovar">
-                <div class="info_tovar_img">
-                  <img src="img/Коляска.png" alt="Коляска">
-                </div>
-                <div class="lines">
-                  <div class="line">
-                    <div class="line1">Тип</div>
-                    <div class="line2">Прогулочная</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество блоков</div>
-                    <div class="line2">Один</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Механизм складывания</div>
-                    <div class="line2">Трость</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество колес</div>
-                    <div class="line2">8</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Колеса</div>
-                    <div class="line2">Резиновые</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Максимальный возраст</div>
-                    <div class="line2">3 года</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Цвет</div>
-                    <div class="line2">Синий</div>
-                  </div>
-                  <a href="#" class="lines_v_korziny_a">
-                    <div class="lines_v_korziny">
-                      <div class="lines_btn_v_korziny">
-                        <i class="fas fa-shopping-basket"></i>в корзину
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="info_tovar_price">
-                  <div class="info_tovar_price_status">
-                    <i class="fas fa-check-circle"></i>Есть в наличии
-                  </div>
-                  <div class="info_tovar_price_procherk">
-                    15800 грн.
-                  </div>
-                  <a href="product selection.html">
-                    <div class="info_tovar_price_price">
-                      <div class="info_tovar_price_price_p">
-                        14590 Г.
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="object ">
-              <p>Коляска Chicco Lite Way stroller Red Passion</p>
-              <div class="info_tovar">
-                <div class="info_tovar_img">
-                  <img src="img/Коляска.png" alt="Коляска">
-                </div>
-                <div class="lines">
-                  <div class="line">
-                    <div class="line1">Тип</div>
-                    <div class="line2">Прогулочная</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество блоков</div>
-                    <div class="line2">Один</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Механизм складывания</div>
-                    <div class="line2">Трость</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество колес</div>
-                    <div class="line2">8</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Колеса</div>
-                    <div class="line2">Резиновые</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Максимальный возраст</div>
-                    <div class="line2">3 года</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Цвет</div>
-                    <div class="line2">Синий</div>
-                  </div>
-                  <a href="#" class="lines_v_korziny_a">
-                    <div class="lines_v_korziny">
-                      <div class="lines_btn_v_korziny">
-                        <i class="fas fa-shopping-basket"></i>в корзину
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="info_tovar_price">
-                  <div class="info_tovar_price_status">
-                    <i class="fas fa-check-circle"></i>Есть в наличии
-                  </div>
-                  <div class="info_tovar_price_procherk">
-                    15800 грн.
-                  </div>
-                  <a href="product selection.html">
-                    <div class="info_tovar_price_price">
-                      <div class="info_tovar_price_price_p">
-                        14590 Г.
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="object ">
-              <p>Коляска Chicco Lite Way stroller Red Passion</p>
-              <div class="info_tovar">
-                <div class="info_tovar_img">
-                  <img src="img/Коляска.png" alt="Коляска">
-                </div>
-                <div class="lines">
-                  <div class="line">
-                    <div class="line1">Тип</div>
-                    <div class="line2">Прогулочная</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество блоков</div>
-                    <div class="line2">Один</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Механизм складывания</div>
-                    <div class="line2">Трость</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Количество колес</div>
-                    <div class="line2">8</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Колеса</div>
-                    <div class="line2">Резиновые</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Максимальный возраст</div>
-                    <div class="line2">3 года</div>
-                  </div>
-                  <div class="line">
-                    <div class="line1">Цвет</div>
-                    <div class="line2">Синий</div>
-                  </div>
-                  <a href="#" class="lines_v_korziny_a">
-                    <div class="lines_v_korziny">
-                      <div class="lines_btn_v_korziny">
-                        <i class="fas fa-shopping-basket"></i>в корзину
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="info_tovar_price">
-                  <div class="info_tovar_price_status">
-                    <i class="fas fa-check-circle"></i>Есть в наличии
-                  </div>
-                  <div class="info_tovar_price_procherk">
-                    15800 грн.
-                  </div>
-                  <a href="product selection.html">
-                    <div class="info_tovar_price_price">
-                      <div class="info_tovar_price_price_p">
-                        14590 Г.
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div> -->
           </div>
-
+          
           <div class="col-lg-12 d-flex justify-content-center align-items-center  end">
             <form>
               <input type="button"  class="b" name="back" value="Назад">
