--- a/purchase.html
+++ b/purchase.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <!-- <link rel="stylesheet" href="css/jquery-ui.min.css"> -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -75,20 +76,7 @@
                   <p class="your_purchase">Ваш заказ:</p>
                   <div class="your_purchase_product">
                     <div id="content">
-
                     </div>
-                    <!-- <div class="your_purchase_product_object">
-                      <div class="y_p_p_o_m" id="your_purchase_product_object_1">Коляска Chicco Lite Way stroller Red Passion</div>
-                      <div class="y_p_p_o_m">1 шт.</div>
-                      <div class="y_p_p_o_m">14900 Р.</div>
-                      <div class="y_p_p_o_m"><a href="javascript:void(0)"><i class="fas fa-times-circle"></i></a></div>
-                    </div>
-                    <div class="your_purchase_product_object">
-                      <div class="y_p_p_o_m" id="your_purchase_product_object_1">Коляска Chicco Lite Way stroller Red Passion</div>
-                      <div class="y_p_p_o_m">1 шт.</div>
-                      <div class="y_p_p_o_m">14900 Р.</div>
-                      <div class="y_p_p_o_m"><a href="javascript:void(0)"><i class="fas fa-times-circle"></i></a></div>
-                    </div> -->
                   </div>
                   <div class="your_purchase_ul">
                     <div class="your_purchase_ul__title">
