--- a/product selection.html
+++ b/product selection.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <!-- <link rel="stylesheet" href="css/jquery-ui.min.css"> -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -62,82 +63,7 @@
             <div class="col-lg-12"><p><a href="index.html">Главная  » </a><a href="product page.html#cat_id=3"> Коляски »</a><a href="product selection.html#cat_id=3&id=${id}"> Детские коляски</a></p></div>
           </div>
           <div id="content">
-
           </div>
-          <!-- <div class="object_baby_care col-lg-12">
-            <div class="object_baby_care_name  col-lg-7">
-              <div><h1>Коляска-трансформер Baby Care Manhattan Air</h1></div>
-            </div>
-            <div class="object_baby_care_info col-lg-12">
-              <div class="row">
-                <div class="object_baby_care_info_img col-lg-4">
-                  <img src="img/baby_care.png" alt="baby_care.png">
-                </div>
-                <div class="object_baby_care_info_about col-lg-6">
-                  <div>
-                    <p>Стоимость</p>
-                  </div>
-                  <a href="#">
-                    <div class="info_tovar_price_price">
-                      <div class="info_tovar_price_price_p">
-                        14590 Г.
-                      </div>
-                    </div>
-                  </a>
-                  <div class="lines">
-                    <div class="line">
-                      <div class="line1">Тип</div>
-                      <div class="line2">Прогулочная</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Количество блоков</div>
-                      <div class="line2">Один</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Механизм складывания</div>
-                      <div class="line2">Трость</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Количество колес</div>
-                      <div class="line2">8</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Колеса</div>
-                      <div class="line2">Резиновые</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Максимальный возраст</div>
-                      <div class="line2">3 года</div>
-                    </div>
-                    <div class="line">
-                      <div class="line1">Цвет</div>
-                      <div class="line2">Синий</div>
-                    </div>
-                  </div>
-                  <div class="info_tovar_price_status">
-                    <i class="fas fa-check-circle"></i>Есть в наличии
-                  </div>
-                  <a href="purchase.html" class="lines_v_korziny_a">
-                    <div class="lines_v_korziny">
-                      <div class="lines_btn_v_korziny">
-                        <i class="fas fa-shopping-basket"></i>в корзину
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="object_baby_care_about">
-              <div class="object_baby_care_about_title">
-                Описание
-              </div>
-              <div class="object_baby_care_about_text">
-                <p>Коляска Silver Cross Balmoral — настоящее произведение искусства. Этапы производства в этой коляске включают операции, выполняемые вручную.</p>
-                <p>Селин Дион, Кэтрин Зета-Джонс, британский премьер Тони Блэр, принцесса Монако Каролина, Мик Джагер, Бэкхемы, Роберт де Ниро, Брук Шилдс, Лиз Херли, Питер Гебриэл, Эль Макферсон и другие Celebrity-персоны для своих детей выбирают коляски фирмы Silver Cross.</p>
-              </div>
-            </div>
-          </div> -->
-
         </div>
       </div>
     </div>
