Начало адаптивного хедера

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container">
       <div class="row">
-        <div class="col-md-3  columnsn">
+        <div class="col-10 offset-1 order-1 col-sm-3 order-sm-0 offset-sm-0 col-md-3  columnsn">
           <div class="site_search">
             <form>
               <div class="search_btn">
@@ -39,10 +39,10 @@
             <p class="p2">развивайтесь малыши!</p>
           </div>
         </div>
-        <div class="col-md-6 head_logo">
+        <div class="col-12 offset-0 order-3 col-sm-12 order-sm-0 offset-sm-0 col-md-6 head_logo">
           <img class="img-fluid img-responsive" src="img/Логотип.png" alt="">
         </div>
-        <div class="col-md-3 columnsn_2">
+        <div class="col-10 offset-1  order-2 col-sm-3  order-sm-0 offset-sm-0 col-md-3 columnsn_2">
           <div class="pp"><i class="fas fa-phone-alt"></i><span class= "span_phone">8 (916)</span> 227 1234</div>
           <div class="bg_head for_p1">
             <i class="fas fa-stopwatch-20"></i> <p>Пн-Пт: 9<sup>00</sup>-20<sup>00</sup></p><p> Сб-Вс: 10<sup>00</sup>-20<sup>00</sup></p>
@@ -51,15 +51,16 @@
             <a href="#"><p>Заказать обратный звонок</p><i class="fas fa-mobile-alt"></i></a>
           </div>
         </div>
+        <!-- <a href="#" id="dark_theme"><i class="fas fa-adjust"></i></a> -->
       </div>
     </div>
   </header>
 
-  <div class="content"> <!--Для всего контента-->
+  <section class="content"> <!--Для всего контента-->
     <div class="container">
-      <div class="row justify-content-center">
+      <div class="row hiq2 justify-content-center">
 
-        <div class="col-8 col-sm-10 col-lg-9">    <!--Для товаров и рекламы-->
+        <div class="col-10 offset-1 offset-sm-0 col-sm-10 col-lg-9">    <!--Для товаров и рекламы-->
           <div class="row">
             <div class="col-12 col-sm-6 col-lg-4"> <!--Первый блок-->
 
@@ -367,7 +368,7 @@
 
         </div>
       </div>
-    </div>
+    </section>
 
     <footer>
       <div class="container">
