--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container">
       <div class="row">
-        <div class="col-10 offset-1 order-1 col-sm-3 order-sm-0 offset-sm-0 col-md-3  columnsn">
+        <div class="col-md-3  columnsn">
           <div class="site_search">
             <form>
               <div class="search_btn">
@@ -39,10 +39,10 @@
             <p class="p2">развивайтесь малыши!</p>
           </div>
         </div>
-        <div class="col-12 offset-0 order-3 col-sm-12 order-sm-0 offset-sm-0 col-md-6 head_logo">
+        <div class="col-md-6 head_logo">
           <img class="img-fluid img-responsive" src="img/Логотип.png" alt="">
         </div>
-        <div class="col-10 offset-1  order-2 col-sm-3  order-sm-0 offset-sm-0 col-md-3 columnsn_2">
+        <div class="col-md-3 columnsn_2">
           <div class="pp"><i class="fas fa-phone-alt"></i><span class= "span_phone">8 (916)</span> 227 1234</div>
           <div class="bg_head for_p1">
             <i class="fas fa-stopwatch-20"></i> <p>Пн-Пт: 9<sup>00</sup>-20<sup>00</sup></p><p> Сб-Вс: 10<sup>00</sup>-20<sup>00</sup></p>
