--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/icons/favicon.ico" type="image/x-icon">
   <link rel="manifest" href="manifest.json">
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js').then(function() {
+        console.log('Service worker registered!');
+      });
+    }
+  </script>
 </head>
 <body>
 
@@ -400,6 +407,8 @@
     <script src="js/jquery.tmpl.min.js"></script>
     <script src="js/jquery.cookie.js"></script>
     <script src="js/main.js"></script>
+
+
 
 
   </body>
