--- a/product page.html
+++ b/product page.html
@@ -325,7 +325,22 @@
   <script src="js/main.js"></script>
   <script src="js/my.js"></script>
 
-
+  <script>
+  $( "#slider-range" ).slider({
+    animate: "fast",
+    range: true,
+    min: 700,
+    max: 15000,
+    values: [ 700, 15000 ],
+    slide: function( event, ui ) {
+      $( "#amount-1" ).val(ui.values[ 0 ]);
+      $( "#amount-2" ).val(ui.values[ 1 ]);
+    }
+  });
+  $( "#amount-1" ).val($( "#slider-range" ).slider( "values", 0 ));
+  $( "#amount-2" ).val($( "#slider-range" ).slider( "values", 1 ));
+  </script>
+  
   <script id="prodTmpl" type="text/x-jquery-tmpl">
   {{each product}}
       <div class="object">
