--- a/product page.html
+++ b/product page.html
@@ -101,8 +101,9 @@
 
 
         </div>
-        <div class="col-lg-3">
-          <div class="col-lg-12">
+        <div class="col-10 offset-2 offset-sm-1 offset-md-1 offset-lg-0 col-lg-3">
+          <div class="row">
+          <div class="col-10 col-sm-6 col-lg-12">
             <div class="cloud">  <!--Корзина-->
               <p>В вашей корзине</p>
               <p><b>7 товаров на суму 1337 грн.</b></p>
@@ -164,6 +165,8 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="col-12 col-sm-5 offset-md-1 offset-lg-0 col-lg-12">
             <div class="blank">
               <div class="characteristic filter blank_title">
                 <p>Характеристики</p>
@@ -288,8 +291,10 @@
               </a>
             </div>
           </div>
+          </div>
         </div> <!--боковое меню-->
       </div>
+    </div>
     </div>
   </section>
 
@@ -378,7 +383,7 @@
               <i class="fas fa-check-circle"></i>Есть в наличии
             </div>
             <div class="info_tovar_price_procherk">
-              15800 грн.
+              ${price}
             </div>
             <a href="product selection.html#cat_id=3&id=${id}">
               <div class="info_tovar_price_price">
