--- a/product page.html
+++ b/product page.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container">
       <div class="row">
-        <div class="col-10 offset-1 order-1 col-sm-12 order-md-1 offset-sm-0 col-md-3  columnsn" id="head_menu">
+        <div class="col-10 offset-1 order-1 order-md-1 offset-sm-0 col-md-4 col-lg-3 columnsn" id="head_menu">
           <div class="site_search">
             <form>
               <div class="search_btn">
@@ -39,7 +39,7 @@
             <p class="p2">развивайтесь малыши!</p>
           </div>
         </div>
-        <div class="col-10 offset-1  order-2 col-sm-2  order-md-3 offset-sm-0 col-md-3 columnsn_2" id="head_menu">
+        <div class="col-10 offset-1  order-2  order-md-3 offset-sm-0 col-md-4 col-lg-3 columnsn_2" id="head_menu">
           <div class="pp"><i class="fas fa-phone-alt"></i><span class= "span_phone">8 (916)</span> 227 1234</div>
           <div class="bg_head for_p1">
             <i class="fas fa-stopwatch-20"></i> <p>Пн-Пт: 9<sup>00</sup>-20<sup>00</sup></p><p> Сб-Вс: 10<sup>00</sup>-20<sup>00</sup></p>
@@ -48,11 +48,9 @@
             <a href="#"><p>Заказать обратный звонок</p><i class="fas fa-mobile-alt"></i></a>
           </div>
         </div>
-        <div class="col-12 offset-0 order-3 col-sm-12 order-md-2 offset-sm-0 col-md-6 head_logo">
-          <img class="img-fluid img-responsive" src="img/Логотип.png" alt="">
+        <div class="col-12 offset-0 order-3 order-md-2 offset-sm-0 col-md-4 col-lg-6 head_logo">
+          <img class="img-fluid img-responsive" src="img/Логотип.png" alt="###">
         </div>
-
-        <!-- <a href="#" id="dark_theme"><i class="fas fa-adjust"></i></a> -->
       </div>
     </div>
   </header>
@@ -303,9 +301,9 @@
       <div class="row">
         <div class="col-12">
           <div class="row justify-content-center">
-            <div class="col-12 order-2 col-md-3 foot"><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
-            <div class="col-12 order-4 col-md-3 foot"><div class="pp"><i class="fas fa-phone-alt"></i><span class="span_phone">8 (916)</span> 227 1234</div></div>
-            <div class="col-12 order-3 col-md-3 foot">
+            <div class="col-12 order-2 order-sm-2 order-md-0 col-md-4 col-lg-2 foot"><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
+            <div class="col-12 order-4 order-sm-3 order-md-0 col-md-4 col-lg-4 foot"><div class="pp"><i class="fas fa-phone-alt"></i><span class="span_phone">8 (916)</span> 227 1234</div></div>
+            <div class="col-12 order-3 order-sm-4 order-md-0 col-md-4 col-lg-3 foot">
               <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
               <div><a href="https://vk.com/audios179631805" target="_blank" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
               <div><a href="#" class="bg_for_i"><i class="fab fa-facebook-f ii"></i></a></div>
@@ -314,7 +312,7 @@
               <div><a href="#" class="bg_for_i"><i class="fas fa-at"></i></a></div>
               <div><a href="#" class="bg_for_i"><i class="fab fa-odnoklassniki ii"></i></a></div>
             </div>
-            <div class="col-12 order-1 col-md-3 foot  logo_footer">
+            <div class="col-12 order-1 order-sm-1 order-md-0 col-md-3 col-lg-3 foot logo_footer">
               <div><img src="img/logo_footer.png" alt="logo_footer"></div>
             </div>
           </div>
@@ -332,13 +330,13 @@
   <script src="js/my.js"></script>
 
 
-
+<!-- offset-1  offset-md-0 -->
   <script id="prodTmpl" type="text/x-jquery-tmpl">
   {{each product}}
       <div class="object">
         <a href="product selection.html#cat_id=3&id=${id}"><p>${title}</p></a>
         <div class="row info_tovar">
-          <div class="col-12 col-md-4 info_tovar_img">
+          <div class="col-10  col-md-4 info_tovar_img">
             <img src="img/${image}.png" alt="Коляска">
           </div>
           <div class="col-12 col-md-5 lines">
