--- a/purchase.html
+++ b/purchase.html
@@ -58,9 +58,9 @@
   <section class="main">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
-          <div class="col-lg-12 start"><!--Начало-->
-            <div class="col-lg-12"><p><a href="index.html">Главная  » </a><a href="product page.html#cat_id=3"> Коляски » </a><a href="product selection.html#cat_id=3&id=${id}"> Детские коляски »</a><a href="#"> Оформление заказа</a></p></div>
+        <div class="col-12">
+          <div class="col-12 start"><!--Начало-->
+            <div class="col-12"><p><a href="index.html">Главная  » </a><a href="product page.html#cat_id=3"> Коляски » </a><a href="product selection.html#cat_id=3&id=${id}"> Детские коляски »</a><a href="#"> Оформление заказа</a></p></div>
           </div>
           <div class="purchase_blank">
             <div class="purchase_container">
