--- a/product page.html
+++ b/product page.html
@@ -95,7 +95,7 @@
               <input type="button"  class="b" name="20" value="по 20">
               <input type="button"  class="b" name="all" value="все">
             </form>
-          </div> -->
+          </div>
 
 
         </div>
